# i-learn-it-from-scratch

./: README.md  main.py  pyproject.toml
FastAPI/: main.py  models.py  sample.py  test.db
FastAPI/secssion1/: db.py  main.py  test.db
FastAPI/secssion2/: main.py  models.py  schemas.py  test.db
Inferential Statistics/: Static.ipynb
Python Master/: dunder methods.ipynb
algo/: test_matrix_time.ipynb
loggin/: basic.ipynb  practice_challenge.py  step1_basic_logging.py  step2_logging.py
neural_network/: neural_101.ipynb
